cabal-version:       2.4
name:                eio
version:             0.0.0.0
synopsis:            IO with Exceptions tracked on the type-level
description:
    IO with Exceptions tracked on the type-level.
    See [README.md](https://github.com/kowainik/eio#eio) for more details.
homepage:            https://github.com/kowainik/eio
bug-reports:         https://github.com/kowainik/eio/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2021 Kowainik
category:            Exceptions, IO, QualifiedDo
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.0.1

source-repository head
  type:                git
  location:            https://github.com/kowainik/eio.git

common common-options
  build-depends:       base ^>= 4.15.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     EIO
                     , EIO.TypeErrors

test-suite eio-doctest
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctest.hs

  build-depends:       eio
                     , doctest
                     , Glob

  ghc-options:         -threaded

executable readme
  import:              common-options
  main-is:             README.lhs
  build-depends:       eio

  build-tool-depends:  markdown-unlit:markdown-unlit
  ghc-options:         -pgmL markdown-unlit
